[package]
name = "vine-erasure-coding"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
vine-primitives = { path = "../primitives" }
vine-node-primitives = { package = "vine-node-primitives", path = "../node/primitives" }
novelpoly = { package = "reed-solomon-novelpoly", version = "1.0.0" }
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["std", "derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
thiserror = "1.0.31"
