[package]
name = "erasure_coding_fuzzer"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
peer-erasure-coding = { path = ".." }
honggfuzz = "0.5"
peer-primitives = { path = "../../primitives" }
primitives = { package = "peer-node-primitives", path = "../../node/primitives/" }

[[bin]]
name = "reconstruct"
path = "src/reconstruct.rs"

[[bin]]
name = "round_trip"
path = "src/round_trip.rs"

[workspace]
