[package]
name = "erasure_coding_fuzzer"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
vine-erasure-coding = { path = ".." }
honggfuzz = "0.5"
vine-primitives = { path = "../../primitives" }
primitives = { package = "vine-node-primitives", path = "../../node/primitives/" }

[[bin]]
name = "reconstruct"
path = "src/reconstruct.rs"

[[bin]]
name = "round_trip"
path = "src/round_trip.rs"

[workspace]
