[package]
name = "fc-cli"
version = "1.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"
description = "Frontier CLI interface"
 
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4.1", features = ["derive", "deprecated"] }
ethereum-types = { version = "0.14.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Substrate
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false   }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.36" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false   }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.36" }
# Frontier
fc-db = { path = "../db" , default-features = false  }
fp-rpc = { version = "3.0.0-dev", path = "../../evm-primitives/rpc", default-features = false   }
fp-storage = { version = "2.0.0", path = "../../evm-primitives/storage", default-features = false   }

[dev-dependencies]
futures = "0.3.21"
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
tempfile = "3.3.0"
# Substrate
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" , default-features = false  }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" , default-features = false  }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" , default-features = false  }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.36"  }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false   }
# Frontier
vine-runtime = { version = "3.0.0-dev", path = "../../runtime/vine" }
