[package]
name = "fc-consensus"
version = "2.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"
description = "Frontier consensus for substrate."
 
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
# Substrate
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" , default-features = false  }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" , default-features = false  }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" , default-features = false  }
sp-block-builder ={ git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" , default-features = false  }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" , default-features = false  }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" , default-features = false  }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" , default-features = false  }

# Frontier
fc-db = { path = "../db" , default-features = false  }

fp-consensus = { version = "2.0.0-dev", path = "../../evm-primitives/consensus", default-features = false   }
fp-rpc = { version = "3.0.0-dev", path = "../../evm-primitives/rpc" , default-features = false  }
fp-storage = { version = "2.0.0", path = "../../evm-primitives/storage", default-features = false   }
